--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,23 @@
 Package: phcfM
+Version: 1.1
 Type: Package
-Title: phcfM R package
-Version: 1.0
-Date: 2012-03-06
+Date: 2012-06-13
+Title: Modelling anthropogenic deforestation
 Depends: coda
 Author: Ghislain Vieilledent <ghislain.vieilledent@cirad.fr>
 Maintainer: Ghislain Vieilledent <ghislain.vieilledent@cirad.fr>
-Description: A package for modelling anthropogenic deforestation
-License: GPL (>= 2)
+Description: phcfM is an R package for modelling anthropogenic
+        deforestation. It was initially developed to obtain REDD
+        baseline scenarios of deforestation for the "programme
+        holistique de conservation des forets a Madagascar" (from which
+        the package is named after). Parameter inference is done in a
+        hierarchical Bayesian framework. Markov chains Monte Carlo
+        (MCMC) are coded in C++ using the Scythe statistical library to
+        maximize computation efficiency.
+License: GPL-3
+SystemRequirements: gcc (>= 4.0.1)
 URL: http://phcfM.sf.net
 LazyLoad: yes
-Packaged: 2012-06-04 18:12:15 UTC; ghislain
+Packaged: 2012-07-03 10:29:07 UTC; ghislain
 Repository: CRAN
-Date/Publication: 2012-06-05 07:15:10
+Date/Publication: 2012-07-03 13:14:51
